# airpods-bridge

./: Cargo.toml  README.md
src/: bluetooth.rs  main.rs  protocol.rs  socket.rs  state.rs
