[package]
name = "airpods-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
libc = "0.2.183"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }
